k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: truenorth-demo
  labels:
    app.kubernetes.io/managed-by: madeforme-manual
    project: truenorth-demo
    env: demo
